--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
-#browser = chrome
-browser = chrome-headless
+browser = chrome
+#browser = chrome-headless
 url = http://zero.webappsecurity.com
 
 #Authorized user
