--- a/pom.xml
+++ b/pom.xml
@@ -48,18 +48,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <parallel>methods</parallel>
-                    <useUnlimitedThreads>true</useUnlimitedThreads>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-<!--                    <threadCountMethods>3</threadCountMethods>-->
-                    <testFailureIgnore>true</testFailureIgnore>
+<!--                    <useUnlimitedThreads>true</useUnlimitedThreads>-->
+<!--                    <perCoreThreadCount>false</perCoreThreadCount>-->
+<!--                    <threadCountMethods>2</threadCountMethods>-->
+<!--                    <rerunFailingTestsCount>1</rerunFailingTestsCount>-->
                     <runOrder>alphabetical</runOrder>
                     <includes>
                         <include>**/*CukesRunner.java</include>
                         <include>**/*FailedTestRunner.java</include>
                     </includes>
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
             <plugin>
