added: DBUtility ->> JDBC ExcelUtil ->> Excel file reader

--- a/configuration.properties
+++ b/configuration.properties
@@ -11,3 +11,9 @@ wrongUsername = userName143
 
 #wrong password
 wrongPassword = kjgtwT56
+
+#JDBC
+JDBC_Username = hr
+JDBC_Password = hr
+#Check the configuration from the DataBase (AWS in our case)
+JDBC_URL = jdbc:oracle:thin:@54.173.172.95:1521:xe
